# XQuant

./: .gitignore  CMakeLists.txt  CreateVS2019Project-Win64.bat  README.md
config/: 配置.txt
config/Stocks/: config.json
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/openXLSX/: CMakeLists.txt  XLCell.hpp  XLWorkbook.cpp  XLXmlData.cpp  XLXmlFile.cpp  XLZipArchive.cpp
dependencies/pugixml/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Core/: Application.cpp  Application.h  Assert.h  Base.h  Common.cpp  Common.h  Config.cpp  Config.h  FrameStack.cpp  FrameStack.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  TimeStep.h  Window.cpp  Window.h
src/Data/: ProjectData.cpp  ProjectData.h
src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Frames/: FAbout.cpp  FAbout.h  FAccountLogin.cpp  FAccountLogin.h  FBacktestLog.cpp  FBacktestLog.h  FBacktestRecord.cpp  FBacktestRecord.h  FBacktestRun.cpp  FBacktestRun.h  FFBacktest.cpp  FFBacktest.h  FFTrade.cpp  FFTrade.h  FHelp.cpp  FHelp.h  FLogOutput.cpp  FLogOutput.h  FMainMenuBar.cpp  FMainMenuBar.h  FMainStatusBar.cpp  FMainStatusBar.h  FMainToolBar.cpp  FMainToolBar.h  FPositionDetails.cpp  FPositionDetails.h  FSecurityClasses.cpp  FSecurityClasses.h  FSecurityList.cpp  FSecurityList.h  FSetting.cpp  FSetting.h  FStrategyBlueprintEdit.cpp  FStrategyBlueprintEdit.h  FStrategyBlueprintRun.cpp  FStrategyBlueprintRun.h  FStrategyClasses.cpp  FStrategyClasses.h  FStrategyProperty.cpp  FStrategyProperty.h  (+8 more)
src/ImGuiEXT/: ImGuiFrame.cpp  ImGuiFrame.h  ImGuiLayer.cpp  ImGuiLayer.h
src/Language/: MultiLanguage.cpp  MultiLanguage.h
src/Platform/Ctp/: App.cpp  KData.h  MdSpi.cpp  MdSpi.h  TdSpi.cpp  TdSpi.h  mystruct.cpp  mystruct.h  timer.h
src/Utils/: FileDialogs.cpp  FileDialogs.h  FileHelper.cpp  FileHelper.h  ImGuiHelper.cpp  ImGuiHelper.h  RapidJsonHelper.cpp  RapidJsonHelper.h  StringHelper.cpp  StringHelper.h  TimeHelper.cpp  TimeHelper.h
src/ctp/: KData.cpp  KData.h  MdSpi.h  Strategy.cpp  Strategy.h  mystruct.h
